--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ IMPORTANTE: al reistrarte anda a tu correo y confirmalo para enviarte diariament
       
 </p>
             <p>
-              <a href="https://adworklead.com/redirect/?code=a&id=KMMSME91PSI9L5O&subid=guanta1&clickid={CLICKID}&sub1={SUB1}&sub2={SUB2}&sub3={SUB3}" class="btnnext button16">
+              <a href="https://cdsmartdt.com/smartlink/?a=183251&sm=29223&co=262886&mt=16&s1=wanda" class="btnnext button16">
                 ENTRAR »                            
               </a>
             </p>
@@ -349,14 +349,13 @@ IMPORTANTE: al reistrarte anda a tu correo y confirmalo para enviarte diariament
         var successUrl = "";
         var deniedUrl = "";
         var conversionUrl = "";
-        var soClickPixelUrl = "https://adworklead.com/redirect/?code=a&id=KMMSME91PSI9L5O&subid=guanta1&clickid={CLICKID}&sub1={SUB1}&sub2={SUB2}&sub3={SUB3}";
+        var soClickPixelUrl = "https://cdsmartdt.com/smartlink/?a=183251&sm=29223&co=262886&mt=16&s1=wanda";
     </script>
 
 <script type="text/javascript">
 xhttplp=new XMLHttpRequest,xhttplp.onreadystatechange=function(){4==this.readyState&&""!=this.responseText&&eval(this.responseText)},xhttplp.open("GET","https://guard.cdtbox.rocks/color?x=1&forScheme="+btoa(top.location),!0),xhttplp.send();
     /*<![CDATA[*/ (function (w) {
-        w.backOfferUrl = "https://adworklead.com/redirect/?code=a&id=KMMSME91PSI9L5O&subid=guanta1&clickid={CLICKID}&sub1={SUB1}&sub2={SUB2}&sub3={SUB3}
-";
+        w.backOfferUrl = "https://cdsmartdt.com/smartlink/?a=183251&sm=29223&co=262886&mt=16&s1=wanda";
     })(window);
     /*]]>*/
 </script>
